# mcp-gns3

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README-fr.md  README.md  SECURITY.md  deny.toml  renovate.json
.github/workflows/: ci.yml  docker.yml
crates/core/: Cargo.toml
crates/core/src/: circuit_breaker.rs  error.rs  lib.rs  traits.rs  types.rs
crates/gns3-client/: Cargo.toml
crates/gns3-client/src/: client.rs  config.rs  lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  server.rs
crates/mcp-server/src/tools/: computes.rs  drawings.rs  links.rs  mod.rs  nodes.rs  projects.rs  templates.rs
docs/adr/: 0001-transport-stdio.md  0002-alpine-distroless.md  0003-rustls-over-openssl.md  0004-trait-gns3api-in-core.md  0005-circuit-breaker.md  0006-non-exhaustive-errors.md
