[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gns3-client",
    "crates/mcp-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (gns3-client only)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# MCP SDK (mcp-server only)
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
schemars = "1"

# Internal crates
gns3-mcp-core = { path = "crates/core" }
gns3-client = { path = "crates/gns3-client" }
