[package]
name = "gns3-mcp-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Core types, traits, and errors for gns3-mcp"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
