[package]
name = "gns3-client"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "HTTP client for GNS3 REST API v2"

[dependencies]
gns3-mcp-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
