[package]
name = "gns3-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MCP server exposing GNS3 REST API v2 to Claude"

[[bin]]
name = "gns3-mcp"
path = "src/main.rs"

[dependencies]
gns3-mcp-core = { workspace = true }
gns3-client = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
